stacks/codespace-k8s/manifests/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: k3k-mycluster2
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: mycluster.nginx.3-127-121-145.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k3k-mycluster2-service
                port:
                  number: 443
