stacks/codespace-k8s/manifests/customer1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k3k-customer1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: k3k-customer1
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: customer1.nginx.3-127-121-145.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k3k-customer1-service
                port:
                  number: 443
